--- a/scss/app.scss
+++ b/scss/app.scss
@@ -62,3 +62,8 @@
 // Motion UI
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+
+// sous-chef scss
+@import './global.scss';
+@import './pagestyles.scss';
