--- a/scss/global.scss
+++ b/scss/global.scss
@@ -44,6 +44,10 @@
   }
 }
 
+
+
+
+
 form {
   .form-icons {
     text-align: center;
@@ -65,14 +69,11 @@ form {
       color: white;
       width: 1rem; // makes the width of icon labels equal
     }
+    ::placeholder {
+      color: #686868;
+    }
   }
 }
-
-div.row.addrecipe{
-    border solid $primary-color 2px;
-
-}
-
 
 // responsive code
 @media screen and (max-width: 768px) {
