--- a/scss/global.scss
+++ b/scss/global.scss
@@ -40,6 +40,12 @@
       font-size: 14px;
       margin: 5px 5px;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.13);
+      p {
+        height: 2em;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
       img {
         height: 200px;
         min-width: 100%;
